# pendragon-website

./: .gitignore  Cargo.toml  README.md  bun.lockb  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
.run/: Deploy dirty.run.xml  Deploy.run.xml  Watch.run.xml  tailwind watch.run.xml
src/: main.rs
src/router/: mod.rs
src/router/handlers/: bookshelf.rs  index.rs  mod.rs  my_work.rs  shoutouts.rs
styles/: styles.css  tailwind.css
templates/pages/: base.html  bookshelf.html  index.html  my_work.html  shoutouts.html  testimonials.html
tests/: example.spec.ts  pages.ts  smoke_and_nav.spec.ts
tests-src/: fixture_builder.ts
tests-src/POMs/: pages.ts
