[package]
name = "pendragon-coding"
version = "1.0.2"
edition = "2021"

[dependencies]
axum = "0.7.3"
shuttle-axum = "0.36.0"
shuttle-runtime = "0.36.0"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
tokio = { version = "1.35.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
dotenv = "0.15.0"
